# showmehow-service

./: .gitignore  Makefile.am  README  autogen.sh  build-flatpak.sh  coding-game-service.js  coding-game-validator.js  com.endlessm.CodingGameService.desktop  com.endlessm.CodingGameService.gresource.xml  com.endlessm.CodingGameService.gschema.xml  com.endlessm.CodingGameService.service.in  com.endlessm.CodingGameService.xml  com.endlessm.Showmehow.Service.desktop  com.endlessm.Showmehow.Service.service.in  com.endlessm.Showmehow.Service.xml  com.endlessm.ShowmehowService.json.in  com.endlessm.ShowmehowService.service.in  com.endlessm.ShowmehowService.xml  com.endlessm.Sylvester.Service.xml  com.endlessm.showmehow.gresource.xml  com.endlessm.showmehow.gschema.xml  configure.ac  edit-desktop-file.js  jasmine.json  showmehow-cmd-helper.c  showmehow-cmd-helper.h  showmehow-service.js  showmehow-validator.js  sylvester-service.js
data/: com.endlessm.Coding.policy.in  lessons.json  lessons.json.unvalidated.in  timeline.json.unvalidated.in
data/text-processing-fs/: atlas.txt
debian/: changelog  coding-game-service.install  control  copyright  gir1.2-showmehow-service-0.install  libcoding-game-service-0-dev.install  libcoding-game-service-0.install  libshowmehow-service-0-dev.install  libshowmehow-service-0.install  rules  showmehow-service.install
dependency-files/: cowsay-wrapper  fortune-install-in-bin.patch
files/: coding-shared-dir.in  sw.txt  test.txt
files/text-processing-fs/: sherlock.txt
lib/: config.js.in  controller.js  descriptors.js  desktopFile.js  service.js  validation.js
mocks/: constructors.js
tests/: testShowmehowServiceContent.js
